# webdev-test

./: README.md
src/: __init__.py  pyproject.toml
src/core/: views.py
src/portfolio_generator/: crew.py
src/templates/: contact.html  generate_portfolio.html  index.html  privacy_policy.html  terms_of_use.html
