[project]
name = "portfolio_generator"
version = "0.1.0"
description = "portfolio-generator using crewAI"
authors = [{ name = "Kashyap Patel", email = "kashypatel22@gmail.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.83.0,<1.0.0"
]

[project.scripts]
portfolio_generator = "portfolio_generator.main:run"
run_crew = "portfolio_generator.main:run"
train = "portfolio_generator.main:train"
replay = "portfolio_generator.main:replay"
test = "portfolio_generator.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"